SONARPY-4682 S5332: Fix FP on http.server serve_forever() when TLS-wrapped or not HTTP
Co-authored-by: Claude Sonnet 5 <noreply@anthropic.com>
GitOrigin-RevId: 784ca31d61e9c4a479bd24d511ea8c617a7fa982